crates/mys/src/unit_tests/snapshots/mys__upgrade_compatibility__upgrade_compatibility_tests__emoji.snap
---
source: crates/mys/src/upgrade_compatibility/../unit_tests/upgrade_compatibility_tests.rs
expression: normalize_path(output)
---
error[Compatibility E01006]: module missing
  ┌─ /fixtures/upgrade_errors/missing_module_toml/emoji/Move.toml:2:2
  │  
2 │   😀[package]😀
  │ ╭───^
3 │ │ 😀
4 │ │ 😀name = "emoji"😀
  │ ╰──────────────────^ Package is missing module 'identifier'
  │  
  = Modules which are part package cannot be removed during an upgrade.
  = Add missing module 'identifier' back to the package.
