crates/mys/src/unit_tests/snapshots/mys__upgrade_compatibility__upgrade_compatibility_tests__starts_second_line.snap
---
source: crates/mys/src/upgrade_compatibility/../unit_tests/upgrade_compatibility_tests.rs
expression: normalize_path(output)
---
error[Compatibility E01006]: module missing
  ┌─ /fixtures/upgrade_errors/missing_module_toml/starts_second_line/Move.toml:2:1
  │  
2 │ ╭ [package]
3 │ │ name = "upgrades"
4 │ │ edition = "2024.beta" # edition = "legacy" to use legacy (pre-2024) Move
  │ ╰────────────────────────────────────────────────────────────────────────^ Package is missing module 'identifier'
  │  
  = Modules which are part package cannot be removed during an upgrade.
  = Add missing module 'identifier' back to the package.
